Aggiunto ExceptionDialog a tutte le eccezioni